manifests/protected-service/deployment-example-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protected-service
  labels:
    app: protected-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protected-service
  template:
    metadata:
      labels:
        app: protected-service
    spec:
      containers:
        - name: protected-service
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
              name: http
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
