manifests/protected-service/service-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: protected-service
spec:
  selector:
    app: protected-service
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: http
