manifests/protected-service/ingress-noauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-noauth
spec:
  ingressClassName: nginx
  rules:
    - host: www.noauth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: protected-service
                port:
                  number: 80
